--- a/AndroidApp/BT_SignalSender/app/src/main/res/layout/fragment_main.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/layout/fragment_main.xml
@@ -1,12 +1,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="50dp" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment">
-
-    <TextView android:text="@string/interesting" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/intro_text" />
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivityFragment"
+    android:id="@+id/">
 
 </RelativeLayout>
