--- a/AndroidApp/BT_SignalSender/app/src/main/res/layout/generic_sender.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/layout/generic_sender.xml
@@ -5,7 +5,7 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment"
-        android:id="@+id/" />
+        android:text="@string/hello_generic_fragment"
+        android:id="@+id/generic_fragment" />
 
 </FrameLayout>
