--- a/AndroidApp/BT_SignalSender/app/src/main/res/layout/generic_sender.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/layout/generic_sender.xml
@@ -6,7 +6,7 @@
     tools:context="com.example.arjun.bt_signalsender.GenericSenderFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
+    <TextView android:layout_width="match_parent" android:layout_height="421dp"
         android:text="@string/hello_generic_fragment"
         android:id="@+id/generic_fragment"
         android:layout_gravity="center_horizontal|bottom" />
