--- a/AndroidApp/BT_SignalSender/app/src/main/res/layout/special_sender.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/layout/special_sender.xml
@@ -4,7 +4,8 @@
     tools:context="com.example.arjun.bt_signalsender.SpecialSenderFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <TextView android:layout_width="match_parent" android:layout_height="420dp"
+        android:text="@string/hello_special_fragment"
+        android:layout_gravity="center_horizontal|bottom" />
 
 </FrameLayout>
