--- a/AndroidApp/BT_SignalSender/app/src/main/res/layout/fragment_main.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/layout/fragment_main.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="Bluetooth Device Address"
+        android:text="Device Address"
         android:id="@+id/btNameTextView"
         android:layout_below="@+id/btMacTextView"
         android:layout_alignStart="@+id/btMacTextView" />
@@ -40,7 +40,7 @@
         android:id="@+id/btMacTextView"
         android:layout_alignStart="@+id/gen_button"
         android:layout_below="@+id/gen_button"
-        android:text="Bluetooth Device Name" />
+        android:text="Device Name" />
 
 
 </RelativeLayout>
